# Helakit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.1/: 404.html  _gen_api_nav.py  index.html  sitemap.xml
0.1/api/SUMMARY/: index.html
0.1/api/helakit/: index.html
0.1/api/helakit.nic/: index.html
0.1/api/helakit.phone/: index.html
0.1/api/helakit.postal/: index.html
0.1/assets/art/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/getting-started/: index.html
0.1/validators/nic/: index.html
0.1/validators/phone/: index.html
0.1/validators/postal/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3/api/SUMMARY/: index.html
0.3/api/helakit/: index.html
0.3/api/helakit.nic/: index.html
0.3/api/helakit.phone/: index.html
0.3/api/helakit.postal/: index.html
0.3/assets/art/: index.html
0.3/changelog/: index.html
0.3/concepts/errors/: index.html
0.3/concepts/results/: index.html
0.3/contributing/: index.html
0.3/getting-started/: index.html
0.3/search/: search_index.json
0.3/stylesheets/: helakit.css
0.3/validators/nic/: index.html
0.3/validators/phone/: index.html
0.3/validators/postal/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/SUMMARY/: index.html
dev/api/helakit/: index.html
dev/api/helakit.nic/: index.html
dev/api/helakit.phone/: index.html
dev/api/helakit.postal/: index.html
dev/assets/art/: index.html
dev/changelog/: index.html
dev/concepts/errors/: index.html
dev/concepts/results/: index.html
dev/contributing/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
dev/validators/nic/: index.html
dev/validators/phone/: index.html
dev/validators/postal/: index.html
docs/: getting-started.md  index.md
docs/assets/art/: README.md
docs/concepts/: errors.md  results.md
docs/stylesheets/: helakit.css
docs/validators/: nic.md  phone.md  postal.md
src/helakit/: __init__.py
src/helakit/_core/: __init__.py  base.py  exceptions.py  result.py
tests/: conftest.py
tests/test_core/: test_data.py  test_result.py
tests/test_nic/: test_batch.py  test_converter.py  test_dataframes.py  test_typed_access.py  test_validator.py
tests/test_phone/: test_validator.py
tests/test_postal/: test_validator.py
(+21 files in other folders)
